# pyc_http_core

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.py  tatus
docs/: AGENTS.md  High-Level Plan.md  README.md  conf.py  etapa4_http11_complete.md  http11_guide.md
docs/01. Step 1/: 01. Initial Plan.md  02. File Structure and First Steps.md
examples/: advanced_http11_client.py  basic_http11_client.py  epoll_example.py  streaming_example.py
history/: AGENTS.md
history/bugs/: 01. Async Option does not work in pytest.md  02. EPOOL does not work in windows.md
history/development/: 01. cursor_defining_project_folder_and_file.md  02. cursor_plano_de_implementa_o_da_fase_2.md  03. cursor_implementar_fase_3_do_backend_de.md  04. plano de implementação etapa 4 Http11.md
src/c_http_core/: __init__.py  connection_pool.py  exceptions.py  http11.py  http_primitives.py  streams.py
src/c_http_core/network/: __init__.py  _cepoll.c  backend.py  epoll.py  epoll.pyx  mock.py  stream.py  utils.py
tests/: __init__.py  benchmark_epoll.py  conftest.py  test_epoll_integration.py  test_exceptions.py  test_http11_basic.py  test_http11_comprehensive.py  test_http11_integration.py  test_http_primitives.py  test_network.py  test_streams.py
